# warnemuende-lighthouses

./: .gitignore  .gitmodules  CMakeLists.txt  CODE_OF_CONDUCT.md  README.md  partitions.csv  sdkconfig.defaults  sdkconfig.defaults.esp32c6  sdkconfig.defaults.esp32s3
.gitea/workflows/: esp32_build.yaml
.github/workflows/: esp32_build.yaml
components/light/: CMakeLists.txt  beacon.c  light.c  outdoor.c
components/light/include/: beacon.h  light.h  outdoor.h
components/persistence/: persistence.c
components/remote_control/: device_service.c
components/storage/: storage.c
data/: capability.json
firmware/: .gitignore  CMakeLists.txt  LICENSE.md  Makefile  README.md  partitions.csv  sdkconfig.defaults  sdkconfig.defaults.esp32  sdkconfig.defaults.esp32c3  sdkconfig.defaults.esp32c5  sdkconfig.defaults.esp32h2  sdkconfig.defaults.esp32p4  sdkconfig.release
firmware/components/light/: CMakeLists.txt  beacon.c  idf_component.yml  light.c  outdoor.c
firmware/components/light/include/: outdoor.h
firmware/components/persistence/: CMakeLists.txt  (+1 more)
firmware/components/remote_control/: CMakeLists.txt  capability_service.c  char_desc.c  device_service.c  led_service.c  light_service.c  remote_control.c  uart_service.c
firmware/components/remote_control/include/: capability_service.h  char_desc.h  device_service.h  led_service.h  light_service.h  remote_control.h  uart_service.h
firmware/data/: capability.json
firmware/main/: CMakeLists.txt  Kconfig.projbuild  main.c
hardware/light_board/: fp-info-cache  light_board.kicad_pcb  light_board.kicad_prl  light_board.kicad_pro  light_board.kicad_sch
hardware/mcu_board/: buck_converter.kicad_sch  fp-info-cache  mcu_board.kicad_pcb  mcu_board.kicad_prl  mcu_board.kicad_pro  mcu_board.kicad_sch  sym-lib-table
main/: CMakeLists.txt  Kconfig.projbuild  beacon.c  beacon.h  main.c
(+10 files in other folders)
